--- a/Sigcomt/Source/Sigcomt.Scheduler.BulkFile/Template/Plantilla-Email.html
+++ b/Sigcomt/Source/Sigcomt.Scheduler.BulkFile/Template/Plantilla-Email.html
@@ -17,17 +17,21 @@
                     <p>Hora de ejecución: @Model.HoraEjecucion</p>
                     <h3>Inputs con Errores en carga</h3>
 
+                    @foreach(var tipoComision in Model.tipoComisionList)
+                    {
                     <table style="background-color: transparent; border: 1px solid #ddd; border-collapse: collapse; border-spacing: 0; margin-bottom: 20px; max-width: 100%; width: 100%;">
                         <thead>
                             <tr>
-                                <th colspan="6" style="background-color: #007833; border: 1px solid #ddd; border-color: #0F0F10; color: #fff; line-height: 1;  min-height: 1px; padding: 2px; padding-left: 5px; padding-right: 5px; position: relative; text-align: center; vertical-align: bottom; width: 8%;">Tipo Comision  : UAC</th>
+                                <th colspan="6" style="background-color: #007833; border: 1px solid #ddd; border-color: #0F0F10; color: #fff; line-height: 1;  min-height: 1px; padding: 2px; padding-left: 5px; padding-right: 5px; position: relative; text-align: center; vertical-align: bottom; width: 8%;">Tipo Comision  : @tipoComision.Reporte</th>
+                            </tr>
+                            @foreach(var input in Model.inputList)
+                            {
+                            <tr>
+                                <th colspan="6" style="background-color: #007833; border: 1px solid #ddd; border-color: #0F0F10; color: #fff; line-height: 1; padding: 2px; text-align: center; vertical-align: bottom;">@input.Input</th>
                             </tr>
                             <tr>
-                                <th colspan="6" style="background-color: #007833; border: 1px solid #ddd; border-color: #0F0F10; color: #fff; line-height: 1; padding: 2px; text-align: center; vertical-align: bottom;"> Input ejemplo</th>
-                            </tr>
-                            <tr>
-                                <th style="background-color: #007833; border: 1px solid #ddd; border-color: #0F0F10; color: #fff; line-height: 1; min-height: 1px; padding: 2px; padding-left: 5px; padding-right: 5px; position: relative; text-align: center; vertical-align: bottom; width: 8%;">Nombre Hoja</th>
-                                <th style="background-color: #007833; border: 1px solid #ddd; border-color: #0F0F10; color: #fff; line-height: 1; min-height: 1px; padding: 2px; padding-left: 5px; padding-right: 5px; position: relative; text-align: center; vertical-align: bottom; width: 8%;">Nombre Columna</th>
+                                <th style="background-color: #007833; border: 1px solid #ddd; border-color: #0F0F10; color: #fff; line-height: 1; min-height: 1px; padding: 2px; padding-left: 5px; padding-right: 5px; position: relative; text-align: center; vertical-align: bottom; width: 8%;">Tipo Error</th>
+                                <th style="background-color: #007833; border: 1px solid #ddd; border-color: #0F0F10; color: #fff; line-height: 1; min-height: 1px; padding: 2px; padding-left: 5px; padding-right: 5px; position: relative; text-align: center; vertical-align: bottom; width: 8%;">Posicion Columna</th>
                                 <th style="background-color: #007833; border: 1px solid #ddd; border-color: #0F0F10; color: #fff; line-height: 1; min-height: 1px; padding: 2px; padding-left: 5px; padding-right: 5px; position: relative; text-align: center; vertical-align: bottom; width: 8%;">Fila</th>
                                 <th style="background-color: #007833; border: 1px solid #ddd; border-color: #0F0F10; color: #fff; line-height: 1; min-height: 1px; padding: 2px; padding-left: 5px; padding-right: 5px; position: relative; text-align: center; vertical-align: bottom; width: 8%;">Error</th>
                             </tr>
@@ -36,15 +40,16 @@
                             @foreach(var error in Model.ErrorList)
                             {
                             <tr>
-                                <td style="border: 1px solid #ddd; border-top: 1px solid #ddd; line-height: 1; padding: 2px; vertical-align: top; text-align: center">@error.NombreHoja</td>
-                                <td style="border: 1px solid #ddd; line-height: 1; padding: 2px; vertical-align: top; text-align: center">@error.NombreColumna</td>
+                                <td style="border: 1px solid #ddd; border-top: 1px solid #ddd; line-height: 1; padding: 2px; vertical-align: top; text-align: center">@error.TipoError</td>
+                                <td style="border: 1px solid #ddd; line-height: 1; padding: 2px; vertical-align: top; text-align: center">@error.PosicionColumna</td>
                                 <td style="border: 1px solid #ddd; line-height: 1; padding: 2px; vertical-align: top; text-align: center">@error.NumeroFila</td>
                                 <td style="border: 1px solid #ddd; line-height: 1; padding: 2px; vertical-align: top; text-align: center">@error.Mensaje</td>
                             </tr>
                             }
+                            }
                         </tbody>
                     </table>
-
+                    }
                 </div>
             </div>
 
