--- a/Sigcomt/Source/Sigcomt.Scheduler.BulkFile/Template/Plantilla-Email.html
+++ b/Sigcomt/Source/Sigcomt.Scheduler.BulkFile/Template/Plantilla-Email.html
@@ -29,9 +29,10 @@
                         <tbody>
                             @foreach(var input in Model.inputList)
                             {
+                               if(input.TipoLog == "2")
+                            {
                             <table style="background-color: transparent; border: 1px solid #ddd; border-collapse: collapse; border-spacing: 0; margin-bottom: 20px; max-width: 100%; width: 100%;">
                                 <thead>
-
                                     <tr>
                                         <th colspan="6" style="background-color: #00ad49c7; border: 1px solid #ddd; border-color: #0F0F10; color: #fff; line-height: 1; padding: 2px; text-align: left; vertical-align: bottom;">@input.Input</th>
                                     </tr>
@@ -52,9 +53,33 @@
                                         <td style="border: 1px solid #ddd; line-height: 1; padding: 2px; vertical-align: top; text-align: center">@error.Mensaje</td>
                                     </tr>
                                     }
-
                                 </tbody>
                             </table>
+                             }
+                            if(input.TipoLog=="1" || input.TipoLog=="3" || input.TipoLog=="4")
+                            {
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th colspan="6" style="background-color: #00ad49c7; border: 1px solid #ddd; border-color: #0F0F10; color: #fff; line-height: 1; padding: 2px; text-align: left; vertical-align: bottom;">@input.Input</th>
+                                    </tr>
+                                    <tr>
+                                        <th style="background-color: #007833; border: 1px solid #ddd; border-color: #0F0F10; color: #fff; line-height: 1; min-height: 1px; padding: 2px; padding-left: 5px; padding-right: 5px; position: relative; text-align: center; vertical-align: bottom; width: 8%;">Tipo Carga</th>
+                                        <th style="background-color: #007833; border: 1px solid #ddd; border-color: #0F0F10; color: #fff; line-height: 1; min-height: 1px; padding: 2px; padding-left: 5px; padding-right: 5px; position: relative; text-align: center; vertical-align: bottom; width: 8%;">Descripci&oacute;n</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach(var error in Model.ErrorList)
+                                    {
+                                    <tr>
+                                        <td style="border: 1px solid #ddd; border-top: 1px solid #ddd; line-height: 1; padding: 2px; vertical-align: top; text-align: center">@error.TipoError</td>
+                                        <td style="border: 1px solid #ddd; line-height: 1; padding: 2px; vertical-align: top; text-align: center">@error.Mensaje</td>
+                                    </tr>
+                                    }
+                                </tbody>
+                            </table>
+                            
+                            }
                             }
                         <tbody>
                     </table>
@@ -70,7 +95,3 @@
 </body>
 
 </html>
-
-
-
-
